--- a/CleanArch/Gcsb.Connect.CleanArch.Infrastructure/Gcsb.Connect.CleanArch.Infrastructure.csproj
+++ b/CleanArch/Gcsb.Connect.CleanArch.Infrastructure/Gcsb.Connect.CleanArch.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Gcsb.Connect.CleanArch.Application\Gcsb.Connect.CleanArch.Application.csproj" />
+  </ItemGroup>
+
 </Project>
