--- a/CleanArch/Gcsb.Connect.CleanArch.Application/Gcsb.Connect.CleanArch.Application.csproj
+++ b/CleanArch/Gcsb.Connect.CleanArch.Application/Gcsb.Connect.CleanArch.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Gcsb.Connect.ClearArch.Domain\Gcsb.Connect.ClearArch.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
