--- a/CleanArch/Gcsb.Connect.CleanArch.Infrastructure/Gcsb.Connect.CleanArch.Infrastructure.csproj
+++ b/CleanArch/Gcsb.Connect.CleanArch.Infrastructure/Gcsb.Connect.CleanArch.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Gcsb.Connect.CleanArch.Application\Gcsb.Connect.CleanArch.Application.csproj" />
+    <ProjectReference Include="..\Gcsb.Connect.ClearArch.Domain\Gcsb.Connect.ClearArch.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.9.4" />
+  </ItemGroup>
+		
+  <ItemGroup>
+    <Folder Include="Database\" />
   </ItemGroup>
 
 </Project>
