--- a/CleanArch/Gcsb.Connect.CleanArch.Tests/Gcsb.Connect.CleanArch.Tests.csproj
+++ b/CleanArch/Gcsb.Connect.CleanArch.Tests/Gcsb.Connect.CleanArch.Tests.csproj
@@ -25,9 +25,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Gcsb.Connect.CleanArch.Application\Gcsb.Connect.CleanArch.Application.csproj" />
+    <ProjectReference Include="..\Gcsb.Connect.CleanArch.Domain\Gcsb.Connect.CleanArch.Domain.csproj" />
     <ProjectReference Include="..\Gcsb.Connect.CleanArch.Infrastructure\Gcsb.Connect.CleanArch.Infrastructure.csproj" />
     <ProjectReference Include="..\Gcsb.Connect.CleanArch.WebAPI\Gcsb.Connect.CleanArch.WebAPI.csproj" />
-    <ProjectReference Include="..\Gcsb.Connect.ClearArch.Domain\Gcsb.Connect.ClearArch.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
