--- a/CleanArch/Gcsb.Connect.CleanArch.Infrastructure/Gcsb.Connect.CleanArch.Infrastructure.csproj
+++ b/CleanArch/Gcsb.Connect.CleanArch.Infrastructure/Gcsb.Connect.CleanArch.Infrastructure.csproj
@@ -8,15 +8,35 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Gcsb.Connect.CleanArch.Application\Gcsb.Connect.CleanArch.Application.csproj" />
-    <ProjectReference Include="..\Gcsb.Connect.ClearArch.Domain\Gcsb.Connect.ClearArch.Domain.csproj" />
+    <ProjectReference Include="..\Gcsb.Connect.CleanArch.Domain\Gcsb.Connect.CleanArch.Domain.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Autofac" Version="4.9.4" />
+		<PackageReference Include="AutoMapper" Version="10.1.1" />
+		<PackageReference Include="AutoMapper.Extensions.ExpressionMapping" Version="4.1.1" />
+		<PackageReference Include="Gcsb.Connect.Pkg.Datamart" Version="1.8.3" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.2" />
+		<PackageReference Include="RestSharp" Version="106.10.1" />
+		<PackageReference Include="TinyCsvParser" Version="2.6.0" />
+	</ItemGroup>
+
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.9.4" />
-  </ItemGroup>
-		
-  <ItemGroup>
-    <Folder Include="Database\" />
+    <Folder Include="Database\Entities\" />
+    <Folder Include="Database\Map\" />
+    <Folder Include="Database\Migrations\" />
+    <Folder Include="Database\Repositories\" />
   </ItemGroup>
 
 </Project>
