--- a/CleanArch/Gcsb.Connect.CleanArch.Tests/Gcsb.Connect.CleanArch.Tests.csproj
+++ b/CleanArch/Gcsb.Connect.CleanArch.Tests/Gcsb.Connect.CleanArch.Tests.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
 	<PackageReference Include="Autofac" Version="4.9.4" />
 	<PackageReference Include="FluentAssertions" Version="5.9.0" />
+	<PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
 	<PackageReference Include="xunit.frameworks.autofac" Version="0.1.0" />
@@ -31,8 +32,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Builders\" />
-    <Folder Include="Cases\" />
     <Folder Include="Mocks\" />
   </ItemGroup>
 
