--- a/CleanArch/Gcsb.Connect.CleanArch.WebAPI/Gcsb.Connect.CleanArch.WebAPI.csproj
+++ b/CleanArch/Gcsb.Connect.CleanArch.WebAPI/Gcsb.Connect.CleanArch.WebAPI.csproj
@@ -8,12 +8,29 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+	<PackageReference Include="Autofac.Configuration" Version="4.1.0" />
+	<PackageReference Include="Autofac.Extensions.DependencyInjection" Version="5.0.1" />
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.2" />
+	<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
+	<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+	<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.2" />
+	<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.9.10" />
+	<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
+	<PackageReference Include="Serilog.AspNetCore" Version="3.3.0-dev-00152" />
+
+	<PackageReference Include="Gcsb.Connect.Pkg.Serilog" Version="1.0.6" />
+	<PackageReference Include="Gcsb.Connect.Pkg.Startup" Version="1.0.3" />
+	<PackageReference Include="Gscb.Connect.Pkg.Authentication" Version="1.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Gcsb.Connect.CleanArch.Application\Gcsb.Connect.CleanArch.Application.csproj" />
     <ProjectReference Include="..\Gcsb.Connect.CleanArch.Domain\Gcsb.Connect.CleanArch.Domain.csproj" />
     <ProjectReference Include="..\Gcsb.Connect.CleanArch.Infrastructure\Gcsb.Connect.CleanArch.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="UseCases\" />
   </ItemGroup>
 
 </Project>
