--- a/CleanArch/Gcsb.Connect.CleanArch.WebAPI/Gcsb.Connect.CleanArch.WebAPI.csproj
+++ b/CleanArch/Gcsb.Connect.CleanArch.WebAPI/Gcsb.Connect.CleanArch.WebAPI.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>27d546f4-2a7f-4cd3-898a-9691ea494f7f</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
